--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header [title]="title"></app-header>
 
 <main>
-  <app-control-panel></app-control-panel>
+  <app-control-panel [decoration]="'bold'"></app-control-panel>
   <app-file></app-file>
 </main>
 
